# credenciales-back/src/main/kotlin/documents/api/generated/dto/UserDataResponseDto.kt
@@ -16,6 +16,8 @@ import io.swagger.v3.oas.annotations.media.Schema
 /**
  * 
  * @param nombre 
+ * @param apellido1 
+ * @param apellido2 
  * @param fechaNacimiento 
  * @param sexo 
  * @param direccion 
@@ -25,6 +27,12 @@ data class UserDataResponseDto(
 
     @Schema(example = "null", description = "")
     @get:JsonProperty("nombre") val nombre: kotlin.String? = null,
+
+    @Schema(example = "null", description = "")
+    @get:JsonProperty("apellido1") val apellido1: kotlin.String? = null,
+
+    @Schema(example = "null", description = "")
+    @get:JsonProperty("apellido2") val apellido2: kotlin.String? = null,
 
     @field:Valid
     @Schema(example = "null", description = "")
